name:                ReflexLab
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Torajiro Aida
copyright:           2017 Torajiro Aida
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , LibReflex
                     , LibTree
                     , Nested
                     , NeoNested
                     , NameDB
  build-depends:       base >= 4.7 && < 5
                     , ref-tf
                     , reflex
                     , reflex-dom
                     , containers
                     , vector
                     , safe
                     , random
  default-language:    Haskell2010

executable ReflexLab
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       ReflexLab
  default-language:    Haskell2010
